[gd_scene load_steps=6 format=1]

[ext_resource path="res://arrow.gd" type="Script" id=1]
[ext_resource path="res://resources/images/tempart-25.png" type="Texture" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 26.7908, -1.43018, 24.4152, -9.97099, 42.7977, 0.0404205 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 42.7977, 0.0404205, 25.207, 9.6559, 26.9605, 1.79383 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 26.7908, -1.43018, 42.7977, 0.0404205, 26.9605, 1.79383 )

[node name="arrowArea" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]

transform/pos = Vector2( -0.62381, 0.997719 )
transform/scale = Vector2( 4.3204, 1.18122 )
rect = Rect2( -10, -10, 20, 20 )

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 788, 32, 447, 109 )

[node name="Shape" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( 24.4152, -9.97099, 26.7908, -1.43018, 26.9605, 1.79383, 25.207, 9.6559, 42.7977, 0.0404205 )
shape_range = Vector2( 0, 2 )
trigger = false

[connection signal="area_enter" from="." to="." method="_on_arrowArea_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_arrowArea_body_enter"]

[connection signal="exit_screen" from="Visibility" to="." method="_on_Visibility_exit_screen"]


